# opencv-sudoku

./: CMakeLists.txt  README.md
includes/: TrainDetector.hpp  sudokuFunc.hpp  utilityMy.hpp
mnist/include/mnist/: mnist_reader.hpp
src/: TrainDetector.cpp  main.cpp  sudokuFunc.cpp  utilityMy.cpp
