PROJECT(sudoku)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

FIND_PACKAGE(OpenCV REQUIRED)
LINK_LIBRARIES(${OpenCV_LIBS})
INCLUDE_DIRECTORIES(AFTER ${CMAKE_CURRENT_BINARY_DIR} ${OpenCV_INCLUDE_DIR})
INCLUDE_DIRECTORIES(includes)
INCLUDE_DIRECTORIES(cascades)
INCLUDE_DIRECTORIES(mnist\\include)
INCLUDE_DIRECTORIES(mnist)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall")
FILE(GLOB SOURCES "src/*.cpp")

ADD_EXECUTABLE(sudoku ${SOURCES})
